force-app/main/default/objects/ProductConfigurationDetail__c/ProductConfigurationDetail__c.object-meta.xml
<CustomObject>
    <label>Product Configuration Detail</label>
    <nameField>
        <label>Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Configuration Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>