force-app/main/default/objects/ProductConfigurationDetail__c/fields/hasDoesNotExist__c.field-meta.xml
<CustomField>
    <fullName>hasDoesNotExist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hasDoesNotExist</label>
    <type>Checkbox</type>
</CustomField>