force-app/main/default/objects/ProductConfigurationDetail__c/fields/Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Item__c</fullName>
    <label>Order Line Item</label>
    <referenceTo>SPO_FirmOrder__c</referenceTo>
    <relationshipLabel>Product Configuration Details</relationshipLabel>
    <relationshipName>Product_Configuration_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>