force-app/main/default/objects/ProductConfigurationDetail__c/fields/Value_Image__c.field-meta.xml
<CustomField>
    <fullName>Value_Image__c</fullName>
    <formula>IF(BEGINS(Value__c, &quot;http&quot;), 
    IMAGE(Value__c,  Value_Text__c), 
    IF(BEGINS(Value__c, &quot;#&quot;), 
         IMAGE(&quot;http://www.thecolorapi.com/id?format=svg&amp;named=false&amp;hex=&quot;+RIGHT(Value__c, 6), Value_Text__c), 
         null
    ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value Image</label>
    <type>Text</type>
</CustomField>